--- a/openatlas/templates/model/network.html
+++ b/openatlas/templates/model/network.html
@@ -18,10 +18,10 @@
         </div>
         <script>
             var graph = {{ json_data|safe }};
-            var width = {{ network_params['options']['width'] }};
-            var height = {{ network_params['options']['height'] }};
-            var charge = {{ network_params['options']['charge'] * 10 }};
-            var distance = {{ network_params['options']['distance'] }};
+            var width = {{ network_params.options.width }};
+            var height = {{ network_params.options.height }};
+            var charge = {{ network_params.options.charge * 10 }};
+            var distance = {{ network_params.options.distance }};
         </script>
         <script src="/static/js/network.js"></script>
         <script src="/static/node_modules/save-svg-as-png/lib/saveSvgAsPng.js"></script>
@@ -49,7 +49,7 @@
         {{ form.charge }} {{ form.charge.label }}<br>
         {{ form.distance }} {{ form.distance.label }}<br>
         <div class="toolbar" style="margin-top: 1em;">
-            <input class="{{ config['CSS']['button']['primary'] }}" id="save" name="save" value="{{ _('apply')|uc_first }}" type="submit">
+            <input class="{{ config.CSS.button.primary }}" id="save" name="save" value="{{ _('apply')|uc_first }}" type="submit">
         </div>
     </form>
 {% endblock %}
