--- a/openatlas/templates/object/insert.html
+++ b/openatlas/templates/object/insert.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% block title_name %} - {{ _('object')|uc_first }}{% endblock %}
 {% block breadcrumb %}
-    {{ [[_('object'), 'object_index'], '+ ' + g.classes['E84'].name]|crumb }}
+    {{ [[_('object'), 'object_index'], '+ ' + g.classes.E84.name]|crumb }}
 {% endblock %}
 {% block content %}
     {{ form|display_form()|safe }}
