--- a/openatlas/templates/overlay/insert.html
+++ b/openatlas/templates/overlay/insert.html
@@ -23,6 +23,6 @@
                 <div class="table-cell">{{ form.bottom_right_northing(class_='number') }}</div>
             </div>
         </div>
-        {{ form.save(class=config['CSS']['button']['primary']) }}
+        {{ form.save(class=config.CSS['button']['primary']) }}
     </form>
 {% endblock %}
