--- a/openatlas/templates/event/index.html
+++ b/openatlas/templates/event/index.html
@@ -7,7 +7,7 @@
     {% if 'contributor'|is_authorized %}
         <div class="toolbar">
             {{ 'Event'|manual_link }}
-            {% for code in config['CLASS_CODES']['event'] %}
+            {% for code in config.CLASS_CODES.event %}
                 {{ code|get_class_name|button(url_for('event_insert', code=code)) }}
             {% endfor %}
         </div>
