--- a/openatlas/templates/import/import_data.html
+++ b/openatlas/templates/import/import_data.html
@@ -6,12 +6,12 @@
 {% block content %}
     <div class="toolbar">
         {{ 'Import'|manual_link }}
-        {% if file_data['file'] %}
-            {{ _('latest backup')|uc_first }}: {{ file_data['file'] }}, {{ file_data['size'] }}
-            {{ _('download')|button(url_for('download_sql', filename=file_data['file'])) }}
+        {% if file_data.file %}
+            {{ _('latest backup')|uc_first }}: {{ file_data.file }}, {{ file_data.size }}
+            {{ _('download')|button(url_for('download_sql', filename=file_data.file)) }}
         {% endif %}
     </div>
-    {% if file_data['backup_too_old'] and not config['IS_UNIT_TEST'] %}
+    {% if file_data.backup_too_old and not config.IS_UNIT_TEST %}
         <p>
             {{ _('There seems to be no recent backup, please make one') }}
             <a href="{{ url_for('export_sql') }}">{{ _('here') }}</a>.
