--- a/openatlas/templates/types/index.html
+++ b/openatlas/templates/types/index.html
@@ -9,14 +9,10 @@
     </div>
     <div>
         <ul class="nav nav-tabs" role="tablist">
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="true"
-                                    href="#menu-tab-system">{{ _('system types')|uc_first }}</a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false"
-                                    href="#menu-tab-custom">{{ _('custom types')|uc_first }}</a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false"
-                                    href="#menu-tab-value">{{ _('value types')|uc_first }}</a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false"
-                                    href="#menu-tab-places">{{ _('places')|uc_first }}</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="true" href="#menu-tab-system">{{ _('system types')|uc_first }}</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#menu-tab-custom">{{ _('custom types')|uc_first }}</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#menu-tab-value">{{ _('value types')|uc_first }}</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#menu-tab-places">{{ _('places')|uc_first }}</a></li>
         </ul>
         <div class="tab-content" id="menuTabContent">
             {% for type_ in ['system', 'custom', 'value', 'places'] %}
@@ -62,7 +58,7 @@
                                                                     type="text">
                                                             {% if not node.locked %}
                                                                 <input type="hidden" name="mode" value="insert">
-                                                                <button class="{{ config['CSS']['button']['primary'] }}"
+                                                                <button class="{{ config.CSS.button.primary }}"
                                                                         type="submit" value="insert"
                                                                         name="add-node-submit">+
                                                                 </button>
@@ -91,7 +87,7 @@
                                                     <p style="margin-top:0;">
                                                         <strong>{{ _('forms')|uc_first }}</strong>:
                                                         {% for id, form in node.forms.items() %}
-                                                            {{ form['name'] }}{{ "," if not loop.last }}
+                                                            {{ form.name }}{{ "," if not loop.last }}
                                                         {% endfor %}
                                                     </p>
                                                 {% endif %}
@@ -127,7 +123,6 @@
             else {
                 $('#menu-tab-system').tab('show');
             }
-
         });
     </script>
 {% endblock %}
