--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -55,7 +55,7 @@
                 </div>
                 {% if 'manager'|is_authorized %}
                     <div style="float:left;margin-left:2em;">
-                        <img src="{{ ''|get_logo|safe }}" id="logo-preview" alt="Logo" style="max-width:400px;"><br>
+                        <img src="{{ get_logo|safe }}" id="logo-preview" alt="Logo" style="max-width:400px;"><br>
                         <div class="toolbar">
                             {% if settings.logo_file_id: %}
                                 {{ _('remove custom logo')|button(url_for('admin_index', action='remove_logo', id_=0)) }}
