Manual: added sources

--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -97,7 +97,7 @@
              data-placement="bottom"
              data-content="{{ _('manual')|uc_first }}"
              data-trigger="hover">
-            <a href="https://redmine.openatlas.eu/projects/uni/wiki/Manual" target="_blank" rel="noopener">
+            <a href="/static/manual/index.html" target="_blank" rel="noopener">
                 <span>
                     <i class="fas fa-book"></i>
                 </span>
