--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -10,25 +10,29 @@
             </div>
         {% endif %}
         <div style="float:left; ">
-            <p>
-                {{ _('feedback teaser') }} <a href="{{ url_for('index_feedback') }}">{{ _('feedback')|uc_first }}</a>.
-            </p>
-            {% if session['settings']['mail'] and not current_user.settings['newsletter'] %}
+            <div class="toolbar">
                 <p>
-                    {{ _('Want to receive updates? Activate the newsletter in your ') }}
-                    <a href="{{ url_for('profile_index') }}">{{ _('profile')|uc_first }}</a>.
+                    {{ 'index'|manual }}
+                    {{ _('model')|button(url_for('model_index')) }}
                 </p>
-            {% endif %}
-            <p>
-                <a href="{{ url_for('model_index') }}">{{ _('model')|uc_first }}</a>
-            </p>
-            <p>
+                <p>
+                    {{ _('want a new feature or experience any problems')|uc_first }}:
+                    {{ _('tell us about it')|button(url_for('index_feedback')) }}
+                </p>
+                {% if session['settings']['mail'] and not current_user.settings['newsletter'] %}
+                    <p>
+                        {{ _('want to receive updates? Activate the newsletter in your')|uc_first }}
+                        {{ _('profile')|button(url_for('profile_index')) }}
+                    </p>
+                {% endif %}
+            </div>
+            <div class="toolbar">
                 {{ _('network visualization')|uc_first }}:
-                <a href="{{ url_for('model_network') }}">Classic</a> -
-                <a href="{{ url_for('model_network', dimensions=2) }}">2D</a> -
-                <a href="{{ url_for('model_network', dimensions=3) }}">3D</a>
-            </p>
-            <p style="font-size:0.9em;">
+                {{ 'Classic'|button(url_for('model_network')) }}
+                {{ '2D'|button(url_for('model_network', dimensions=2)) }}
+                {{ '3D'|button(url_for('model_network', dimensions=3)) }}
+            </div>
+            <p style="font-size:0.8em;margin-top:1em;">
                 {% if session['login_previous_success'] %}
                     {{ _('last login')|uc_first }}: {{ session['login_previous_success'] }}
                     {% if session['login_previous_failures'] > 0 %}
