--- a/openatlas/templates/event/view.html
+++ b/openatlas/templates/event/view.html
@@ -19,6 +19,7 @@
         <div class="tab-content">
             <div class="tab-pane fade show active" role="tabpanel" id="tab-info">
                 <div class="toolbar">
+                    {{ 'menu/event'|manual }}
                     {% if 'contributor'|is_authorized %}
                         {{ _('edit')|button(url_for('event_update', id_=event.id)) }}
                         {{ event|display_delete_link }}
