--- a/openatlas/templates/file/view.html
+++ b/openatlas/templates/file/view.html
@@ -14,7 +14,11 @@
             <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-place">{{ _('place')|uc_first }} {{ tables.place|format_tab_number }}</a></li>
             {% for table_name in ['node', 'feature', 'stratigraphic_unit', 'find', 'human_remains'] %}
                 {% if tables[table_name].rows %}
-                    <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-{{ table_name }}">{{ _(table_name)|uc_first }} {{ tables[table_name]|format_tab_number }}</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-{{ table_name }}">
+                            {{ _(table_name|replace('_', ' '))|uc_first }} {{ tables[table_name]|format_tab_number }}
+                        </a>
+                    </li>
                 {% endif %}
             {% endfor %}
             <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-reference">{{ _('reference')|uc_first }} {{ tables.reference|format_tab_number }}</a></li>
