--- a/openatlas/templates/reference/view.html
+++ b/openatlas/templates/reference/view.html
@@ -11,9 +11,13 @@
         <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-event">{{ _('event')|uc_first }} {{ tables.event|format_tab_number }}</a></li>
         <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-actor">{{ _('actor')|uc_first }} {{ tables.actor|format_tab_number }}</a></li>
         <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-place">{{ _('place')|uc_first }} {{ tables.place|format_tab_number }}</a></li>
-        {% for table_name in ['feature', 'stratigraphic_unit', 'find'] %}
+        {% for table_name in ['feature', 'stratigraphic_unit', 'find', 'human_remains'] %}
             {% if tables[table_name].rows %}
-                <li class="nav-item"> <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-{{ table_name }}">{{ _(table_name)|uc_first }} {{ tables[table_name]|format_tab_number }}</a></li>
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-{{ table_name }}">
+                        {{ _(table_name|replace('_', ' '))|uc_first }} {{ tables[table_name]|format_tab_number }}
+                    </a>
+                </li>
             {% endif %}
         {% endfor %}
         <li class="nav-item"> <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-file">{{ _('files')|uc_first }} {{ tables.file|format_tab_number }}</a></li>
