--- a/openatlas/templates/reference/view.html
+++ b/openatlas/templates/reference/view.html
@@ -25,6 +25,7 @@
     <div class="tab-content">
         <div class="tab-pane fade show active" role="tabpanel" id="tab-info">
             <div class="toolbar">
+                {{ 'menu/reference'|manual }}
                 {% if 'contributor'|is_authorized %}
                     {{ _('edit')|button(url_for('reference_update', id_=reference.id)) }}
                     {{ reference|display_delete_link }}
