--- a/openatlas/templates/search/index.html
+++ b/openatlas/templates/search/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
     <div class="toolbar">
-        {{ 'Search'|manual_link }}
+        {{ 'tools/search'|manual }}
     </div>
     <div style="float:left;">
         <form method="post">
