--- a/openatlas/templates/profile/update.html
+++ b/openatlas/templates/profile/update.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
     <div class="toolbar">
-        {{ 'Profile'|manual_link }}
+        {{ 'tools/profile'|manual }}
     </div>
     <form method="post">
         {{ form.csrf_token }}
