--- a/openatlas/templates/model/network2.html
+++ b/openatlas/templates/model/network2.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/static/css/network.css">
     <script src="/static/node_modules/huebee/dist/huebee.pkgd.min.js"></script>
     <div class="toolbar">
-        {{ 'Network_visualization'|manual_link }}
+        {{ 'tools/network'|manual }}
     </div>
     {% if json_data %}
         <script src="/static/vendor/network/preact.umd.js"></script>
