--- a/openatlas/templates/model/network.html
+++ b/openatlas/templates/model/network.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="/static/css/network.css">
         <script src="/static/node_modules/d3/dist/d3.min.js"></script>
         <div class="toolbar">
-            {{ 'Network_visualization'|manual_link }}
+            {{ 'tools/network'|manual }}
             {{ _('download')|button('#', onclick="saveSvgAsPng(d3.select('svg').node(), 'network.png')") }}
         </div>
         <div>
@@ -27,7 +27,7 @@
         <script src="/static/node_modules/save-svg-as-png/lib/saveSvgAsPng.js"></script>
     {% else %}
         <div class="toolbar">
-            {{ 'Network_visualization'|manual_link }}
+            {{ 'tools/network'|manual }}
         </div>
         <h2>{{ _('no data to display')|uc_first }}</h2>
     {% endif %}
