--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -69,7 +69,7 @@
             </div>
             <div class="tab-pane fade" role="tabpanel" id="tab-user">
                 <div class="toolbar">
-                    {{ 'User'|manual_link }}
+                    {{ 'admin/user'|manual }}
                     {{ _('activity')|button(url_for('user_activity')) }}
                     {% if 'manager'|is_authorized %}
                         {% if session.settings.mail %}
