--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -24,7 +24,7 @@
         <div class="tab-content">
             <div class="tab-pane fade show active" role="tabpanel" id="tab-files">
                 <div class="toolbar">
-                    {{ 'admin/file'|manual }}
+                    {{ 'admin/files'|manual }}
                     {% if 'manager'|is_authorized %}
                         {{  _('edit settings')|button(url_for('admin_settings', category='files')) }}
                     {% endif %}
@@ -83,7 +83,7 @@
             {% if 'admin'|is_authorized: %}
                 <div class="tab-pane fade" role="tabpanel" id="tab-general">
                     <div class="toolbar">
-                        {{ 'General'|manual_link }}
+                        {{ 'admin/general'|manual }}
                         {{ _('edit settings')|button(url_for('admin_settings', category='general')) }}
                         {{ _('system log')|button(url_for('admin_log')) }}
                     </div>
