--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -91,7 +91,7 @@
                 </div>
                 <div class="tab-pane fade" role="tabpanel" id="tab-mail">
                     <div class="toolbar">
-                        {{ 'Mail'|manual_link }}
+                        {{ 'admin/email'|manual }}
                         {{ _('edit settings')|button(url_for('admin_settings', category='mail')) }}
                     </div>
                     {{ info.mail|display_info }}
