--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -91,7 +91,7 @@
                 </div>
                 <div class="tab-pane fade" role="tabpanel" id="tab-mail">
                     <div class="toolbar">
-                        {{ 'admin/email'|manual }}
+                        {{ 'admin/mail'|manual }}
                         {{ _('edit settings')|button(url_for('admin_settings', category='mail')) }}
                     </div>
                     {{ info.mail|display_info }}
@@ -103,7 +103,7 @@
             {% if 'manager'|is_authorized %}
                 <div class="tab-pane fade" role="tabpanel" id="tab-map">
                     <div class="toolbar">
-                        {{ 'Map'|manual_link }}
+                        {{ 'admin/map'|manual }}
                         {{ _('edit settings')|button(url_for('admin_settings', category='map')) }}
                     </div>
                     <div>
