Manual: email and map settings

--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -112,7 +112,7 @@
                 </div>
                 <div class="tab-pane fade" role="tabpanel" id="tab-content">
                     <div class="toolbar">
-                        {{ 'Content'|manual_link }}
+                        {{ 'admin/content'|manual }}
                     </div>
                     <div>
                         {{ tables.content.display('content')|safe }}
