--- a/openatlas/templates/import/import_data.html
+++ b/openatlas/templates/import/import_data.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
     <div class="toolbar">
-        {{ 'Import'|manual_link }}
+        {{ 'admin/import'|manual }}
         {% if file_data.file %}
             {{ _('latest backup')|uc_first }}: {{ file_data.file }}, {{ file_data.size }}
             {{ _('download')|button(url_for('download_sql', filename=file_data.file)) }}
