--- a/openatlas/templates/admin/check_link_duplicates.html
+++ b/openatlas/templates/admin/check_link_duplicates.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
     <div class="toolbar">
-        {{ 'Data_integrity'|manual_link }}
+        {{ 'admin/data_integrity_checks'|manual }}
         {% if duplicates %}
             {{ _('delete link duplicates')|button(url_for('admin_check_link_duplicates', delete='delete')) }}
         {% endif %}
