--- a/openatlas/templates/export/export_csv.html
+++ b/openatlas/templates/export/export_csv.html
@@ -6,7 +6,7 @@
 {% block content %}
     {% if writeable %}
         <div style="float:left;margin-right: 1em;">
-            {{ 'Export'|manual_link }}
+            {{ 'admin/export'|manual }}
             {{ form|display_form }}
         </div>
     {% else %}
