--- a/openatlas/templates/export/export_sql.html
+++ b/openatlas/templates/export/export_sql.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
     <div class="toolbar">
-        {{ 'Export'|manual_link }}
+        {{ 'admin/export'|manual }}
     </div>
     {% if writeable %}
         {{ form|display_form }}
