Manual: execute SQL

--- a/openatlas/templates/sql/index.html
+++ b/openatlas/templates/sql/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
     <div class="toolbar">
-        {{ 'SQL'|manual_link }}
+        {{ 'admin/execute_sql'|manual }}
     </div>
     <h2 class="error">
         {{ _('Warning: direct database manipulation is dangerous and can result in data loss and/or an unusable application!') }}
